[fix]c-lineのz-indexを変更しております (#33)

--- a/src/sass/object/project/_p-top-mv.scss
+++ b/src/sass/object/project/_p-top-mv.scss
@@ -27,6 +27,7 @@
 
   img{
       height: 100%;
+      object-fit: cover;
   }
 }
 
